force-app/main/default/objects/Candidate__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Developer II</fullName>
            </value>
            <value>
                <fullName>Salesforce Application Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce System Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>