force-app/main/default/objects/Candidate__c/fields/Primary_Certification__c.field-meta.xml
<CustomField>
    <fullName>Primary_Certification__c</fullName>
    <label>Primary Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>