force-app/main/default/objects/Candidate__c/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <label>Target Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Enterprise Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>